k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: proxy-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, DELETE, HEAD, OPTIONS, PUT"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  rules:
    - http:
        paths:
          - path: /users(/|$)(.*)
            backend:
              serviceName: users
              servicePort: 8080
          - path: /apartments(/|$)(.*)
            backend:
              serviceName: apartments
              servicePort: 8080
          - path: /images(/|$)(.*)
            backend:
              serviceName: images
              servicePort: 8080
          - path: /chat(/|$)(.*)
            backend:
              serviceName: chat
              servicePort: 8080
          - path: /matching(/|$)(.*)
            backend:
              serviceName: matching
              servicePort: 8080
